# SDLTemplate

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Game.h  Handler.h  InputManager.h  State.h  Utils.h  Window.h
res/assets/: README.txt
src/: Game.cpp  State.cpp  Window.cpp  main.cpp
